@@ -17,9 +17,7 @@
 
 package org.apache.solr.update;
 
-import static org.apache.solr.update.processor.DistributedUpdateProcessor.DistribPhase.FROMLEADER;
-import static org.apache.solr.update.processor.DistributingUpdateProcessorFactory.DISTRIB_UPDATE_PARAM;
-
+import java.io.Closeable;
 import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.FilenameFilter;
@@ -67,6 +65,9 @@ import org.apache.solr.util.RefCounted;
 import org.apache.solr.util.plugin.PluginInfoInitialized;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+
+import static org.apache.solr.update.processor.DistributedUpdateProcessor.DistribPhase.FROMLEADER;
+import static org.apache.solr.update.processor.DistributingUpdateProcessorFactory.DISTRIB_UPDATE_PARAM;
 
 
 /** @lucene.experimental */
@@ -312,19 +313,18 @@ public class UpdateLog implements PluginInfoInitialized {
     }
 
     // TODO: these startingVersions assume that we successfully recover from all non-complete tlogs.
-    UpdateLog.RecentUpdates startingUpdates = getRecentUpdates();
-    try {
+    try (RecentUpdates startingUpdates = getRecentUpdates()) {
       startingVersions = startingUpdates.getVersions(numRecordsToKeep);
       startingOperation = startingUpdates.getLatestOperation();
 
       // populate recent deletes list (since we can't get that info from the index)
-      for (int i=startingUpdates.deleteList.size()-1; i>=0; i--) {
+      for (int i = startingUpdates.deleteList.size() - 1; i >= 0; i--) {
         DeleteUpdate du = startingUpdates.deleteList.get(i);
-        oldDeletes.put(new BytesRef(du.id), new LogPtr(-1,du.version));
+        oldDeletes.put(new BytesRef(du.id), new LogPtr(-1, du.version));
       }
 
       // populate recent deleteByQuery commands
-      for (int i=startingUpdates.deleteByQueryList.size()-1; i>=0; i--) {
+      for (int i = startingUpdates.deleteByQueryList.size() - 1; i >= 0; i--) {
         Update update = startingUpdates.deleteByQueryList.get(i);
         List<Object> dbq = (List<Object>) update.log.lookup(update.pointer);
         long version = (Long) dbq.get(1);
@@ -332,8 +332,6 @@ public class UpdateLog implements PluginInfoInitialized {
         trackDeleteByQuery(q, version);
       }
 
-    } finally {
-      startingUpdates.close();
     }
 
   }
@@ -927,16 +925,32 @@ public class UpdateLog implements PluginInfoInitialized {
     }
   }
   
-  public class RecentUpdates {
-    Deque<TransactionLog> logList;    // newest first
+  public class RecentUpdates implements Closeable {
+
+    final Deque<TransactionLog> logList;    // newest first
     List<List<Update>> updateList;
     HashMap<Long, Update> updates;
     List<Update> deleteByQueryList;
     List<DeleteUpdate> deleteList;
     int latestOperation;
 
+    public RecentUpdates(Deque<TransactionLog> logList) {
+      this.logList = logList;
+      boolean success = false;
+      try {
+        update();
+        success = true;
+      } finally {
+        // defensive: if some unknown exception is thrown,
+        // make sure we close so that the tlogs are decref'd
+        if (!success) {
+          close();
+        }
+      }
+    }
+
     public List<Long> getVersions(int n) {
-      List<Long> ret = new ArrayList(n);
+      List<Long> ret = new ArrayList<>(n);
       
       for (List<Update> singleList : updateList) {
         for (Update ptr : singleList) {
@@ -1051,6 +1065,7 @@ public class UpdateLog implements PluginInfoInitialized {
 
     }
     
+    @Override
     public void close() {
       for (TransactionLog log : logList) {
         log.decref();
@@ -1087,23 +1102,8 @@ public class UpdateLog implements PluginInfoInitialized {
 
     // TODO: what if I hand out a list of updates, then do an update, then hand out another list (and
     // one of the updates I originally handed out fell off the list).  Over-request?
+    return new RecentUpdates(logList);
 
-    boolean success = false;
-    RecentUpdates recentUpdates = null;
-    try {
-      recentUpdates = new RecentUpdates();
-      recentUpdates.logList = logList;
-      recentUpdates.update();
-      success = true;
-    } finally {
-      // defensive: if some unknown exception is thrown,
-      // make sure we close so that the tlogs are decref'd
-      if (!success && recentUpdates != null) {
-        recentUpdates.close();
-      }
-    }
-
-    return recentUpdates;
   }
 
   public void bufferUpdates() {
@@ -1575,9 +1575,7 @@ public class UpdateLog implements PluginInfoInitialized {
     Long highestVersion = null;
     final RTimer timer = new RTimer();
 
-    RecentUpdates recentUpdates = null;
-    try {
-      recentUpdates = getRecentUpdates();
+    try (RecentUpdates recentUpdates = getRecentUpdates()) {
       long maxVersionFromRecent = recentUpdates.getMaxRecentVersion();
       long maxVersionFromIndex = versions.getMaxVersionFromIndex(newSearcher);
 
@@ -1593,9 +1591,6 @@ public class UpdateLog implements PluginInfoInitialized {
       highestVersion = maxVersion;
     } catch (IOException ioExc) {
       log.warn("Failed to determine the max value of the version field due to: "+ioExc, ioExc);
-    } finally {
-      if (recentUpdates != null)
-        recentUpdates.close();
     }
 
     log.info("Took {}ms to seed version buckets with highest version {}",
